@@ -1,8 +1,6 @@
 <?xml version="1.0"?>
 
 <project name="portal" basedir="." default="compile" xmlns:antelope="antlib:ise.antelope.tasks">
-	<property name="project.dir" value="." />
-
 	<import file="build-common.xml" />
 
 	<target name="all">
@@ -18,9 +16,11 @@
 
 		<ant dir="util-bridges" target="clean" inheritAll="false" />
 		<ant dir="util-java" target="clean" inheritAll="false" />
+		<ant dir="util-slf4j" target="clean" inheritAll="false" />
 		<ant dir="util-taglib" target="clean" inheritAll="false" />
 
 		<ant dir="portal-impl" target="clean" inheritAll="false" />
+		<ant dir="portal-pacl" target="clean" inheritAll="false" />
 
 		<ant dir="portal-web" target="clean" inheritAll="false" />
 
@@ -137,9 +137,11 @@
 
 		<ant dir="util-bridges" target="compile" inheritAll="false" />
 		<ant dir="util-java" target="compile" inheritAll="false" />
+		<ant dir="util-slf4j" target="compile" inheritAll="false" />
 		<ant dir="util-taglib" target="compile" inheritAll="false" />
 
 		<ant dir="portal-impl" target="compile" inheritAll="false" />
+		<ant dir="portal-pacl" target="compile" inheritAll="false" />
 	</target>
 
 	<target name="deploy">
@@ -158,7 +160,7 @@
 			<and>
 				<equals arg1="${app.server.type}" arg2="tomcat" />
 				<not>
-					<available file="${app.server.tomcat.dir}/lib/catalina.jar" />
+					<available file="${app.server.tomcat.classes.global.dir}/catalina.jar" />
 				</not>
 			</and>
 			<then>
@@ -177,9 +179,11 @@ ${app.server.tomcat.dir}, then run "ant -buildfile build-dist.xml unzip-tomcat".
 
 		<ant dir="util-bridges" target="deploy" inheritAll="false" />
 		<ant dir="util-java" target="deploy" inheritAll="false" />
+		<ant dir="util-slf4j" target="deploy" inheritAll="false" />
 		<ant dir="util-taglib" target="deploy" inheritAll="false" />
 
 		<ant dir="portal-impl" target="deploy" inheritAll="false" />
+		<ant dir="portal-pacl" target="deploy" inheritAll="false" />
 
 		<ant dir="portal-web" target="deploy" inheritAll="false" />
 
@@ -203,7 +207,7 @@ ${app.server.tomcat.dir}, then run "ant -buildfile build-dist.xml unzip-tomcat".
 				<copy todir="${app.server.lib.global.dir}">
 					<fileset
 						dir="${jdbc.drivers.optional.dir}"
-						includes="*.jar"
+						includes="${jdbc.drivers}"
 					/>
 				</copy>
 			</then>
@@ -217,23 +221,85 @@ ${app.server.tomcat.dir}, then run "ant -buildfile build-dist.xml unzip-tomcat".
 			<equals arg1="${app.server.type}" arg2="jboss" />
 			<then>
 				<if>
-					<not>
-						<available file="${app.server.lib.global.dir}/module.xml" />
-					</not>
+					<equals arg1="${app.server.jboss.major.version}" arg2="5" />
 					<then>
-						<copy
-							file="tools/servers/jboss/modules/module.xml"
-							tofile="${app.server.lib.global.dir}/module.xml"
-						/>
-					</then>
-				</if>
+						<loadfile property="run.conf.content" srcfile="${app.server.bin.dir}/run.conf" />
 
-				<delete>
-					<fileset
-						dir="${app.server.lib.portal.dir}"
-						includes="eclipselink.jar"
-					/>
-				</delete>
+						<antelope:stringutil string="${run.conf.content}" property="run.conf.content.index">
+							<indexof string="-Dfile.encoding=UTF-8" fromindex="0" />
+						</antelope:stringutil>
+
+						<if>
+							<equals arg1="${run.conf.content.index}" arg2="-1" />
+							<then>
+								<echo file="${app.server.bin.dir}/run.conf" append="true">
+		JAVA_OPTS="$JAVA_OPTS -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -Djboss.vfs.forceVfsJar=true -Dorg.jboss.logging.Log4jService.catchSystemOut=false -Duser.timezone=GMT -Xmx1024m -XX:MaxPermSize=256m"</echo>
+							</then>
+						</if>
+
+						<loadfile property="run.conf.bat.content" srcfile="${app.server.bin.dir}/run.conf.bat" />
+
+						<antelope:stringutil string="${run.conf.bat.content}" property="run.conf.bat.content.index">
+							<indexof string="-Dfile.encoding=UTF-8" fromindex="0" />
+						</antelope:stringutil>
+
+						<if>
+							<equals arg1="${run.conf.bat.content.index}" arg2="-1" />
+							<then>
+								<replace file="${app.server.bin.dir}/run.conf.bat">
+									<replacetoken><![CDATA[:JAVA_OPTS_SET]]></replacetoken>
+									<replacevalue><![CDATA[set "JAVA_OPTS=%JAVA_OPTS% -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -Djboss.vfs.forceVfsJar=true -Dorg.jboss.logging.Log4jService.catchSystemOut=false -Duser.timezone=GMT -Xmx1024m -XX:MaxPermSize=256m"
+
+		:JAVA_OPTS_SET]]></replacevalue>
+								</replace>
+							</then>
+						</if>
+
+						<replace file="${app.server.deploy.dir}/jbossweb.sar/server.xml">
+							<replacetoken><![CDATA[redirectPort="8443" />]]></replacetoken>
+							<replacevalue><![CDATA[redirectPort="8443" URIEncoding="UTF-8" />]]></replacevalue>
+						</replace>
+
+						<move
+							failonerror="false"
+							file="${app.server.dir}/common/lib/hibernate-validator.jar"
+							tofile="${app.server.dir}/common/lib/hibernate-validator.jar.bak"
+						/>
+
+						<move
+							failonerror="false"
+							file="${app.server.dir}/common/lib/slf4j-jboss-logging.jar"
+							tofile="${app.server.dir}/common/lib/slf4j-jboss-logging.jar.bak"
+						/>
+
+						<delete>
+							<fileset
+								dir="${app.server.lib.portal.dir}"
+								includes="jaxrpc.jar,log4j.jar,stax.jar,xercesImpl.jar,xml-apis.jar"
+							/>
+						</delete>
+					</then>
+					<else>
+						<if>
+							<not>
+								<available file="${app.server.lib.global.dir}/module.xml" />
+							</not>
+							<then>
+								<copy
+									file="tools/servers/jboss/modules/module.xml"
+									tofile="${app.server.lib.global.dir}/module.xml"
+								/>
+							</then>
+						</if>
+
+						<delete>
+							<fileset
+								dir="${app.server.lib.portal.dir}"
+								includes="eclipselink.jar"
+							/>
+						</delete>
+					</else>
+				</if>
 			</then>
 		</if>
 
@@ -327,7 +393,7 @@ ${app.server.tomcat.dir}, then run "ant -buildfile build-dist.xml unzip-tomcat".
 				<copy todir="${app.server.lib.global.dir}">
 					<fileset
 						dir="lib/development"
-						includes="activation.jar,jms.jar,jta.jar,mail.jar,persistence.jar"
+						includes="activation.jar,jms.jar,jta.jar,junit.jar,mail.jar,persistence.jar"
 					/>
 				</copy>
 
@@ -429,9 +495,22 @@ print AdminControl.invoke(appManager, 'startApplication', 'liferay-portal')
 	</target>
 
 	<target name="deploy-properties">
-		<copy todir="${app.server.classes.portal.dir}" overwrite="true">
-			<fileset dir="portal-impl/src" includes="portal-*.properties,system-*.properties" />
-		</copy>
+		<if>
+			<and>
+				<equals arg1="${app.server.bundled}" arg2="true" />
+				<equals arg1="${app.server.type}" arg2="glassfish" />
+			</and>
+			<then>
+				<war destfile="${app.server.glassfish.portal.dir}" update="true">
+					<classes dir="portal-impl/src" includes="portal-*.properties,system-*.properties" />
+				</war>
+			</then>
+			<else>
+				<copy todir="${app.server.classes.portal.dir}" overwrite="true">
+					<fileset dir="portal-impl/src" includes="portal-*.properties,system-*.properties" />
+				</copy>
+			</else>
+		</if>
 	</target>
 
 	<target name="dist">
@@ -442,6 +521,7 @@ print AdminControl.invoke(appManager, 'startApplication', 'liferay-portal')
 		<antcall target="dtddoc" />
 		<antcall target="javadoc" />
 		<antcall target="javadoc-all" />
+		<antcall target="propertiesdoc" />
 		<ant dir="util-taglib" target="taglibdoc" inheritAll="false" />
 	</target>
 
@@ -470,9 +550,11 @@ print AdminControl.invoke(appManager, 'startApplication', 'liferay-portal')
 
 		<ant dir="util-bridges" target="jar" inheritAll="false" />
 		<ant dir="util-java" target="jar" inheritAll="false" />
+		<ant dir="util-slf4j" target="jar" inheritAll="false" />
 		<ant dir="util-taglib" target="jar" inheritAll="false" />
 
 		<ant dir="portal-impl" target="jar" inheritAll="false" />
+		<ant dir="portal-pacl" target="jar" inheritAll="false" />
 
 		<ant dir="portal-web" target="war" inheritAll="false" />
 
@@ -490,7 +572,7 @@ print AdminControl.invoke(appManager, 'startApplication', 'liferay-portal')
 			destdir="${doc.java.dir}"
 			doctitle="Liferay ${lp.version} Public API Documentation"
 			header="&lt;b&gt;Liferay ${lp.version}&lt;/b&gt;"
-			maxmemory="1024m"
+			maxmemory="2048m"
 			noqualifier="java.*"
 			overview="portal-service/src/portal-service-overview.html"
 			stylesheetfile="${project.dir}/tools/javadoc.css"
@@ -514,6 +596,7 @@ print AdminControl.invoke(appManager, 'startApplication', 'liferay-portal')
 			<packageset dir="portal-service/src" />
 			<packageset dir="util-bridges/src" />
 			<packageset dir="util-java/src" />
+			<packageset dir="util-slf4j/src" />
 
 			<tag name="generated" description="" />
 		</javadoc>
@@ -530,7 +613,7 @@ print AdminControl.invoke(appManager, 'startApplication', 'liferay-portal')
 			destdir="${doc.java.dir}"
 			doctitle="Liferay ${lp.version} Internal API Documentation"
 			header="&lt;b&gt;Liferay ${lp.version}&lt;/b&gt;"
-			maxmemory="1024m"
+			maxmemory="2048m"
 			noqualifier="java.*"
 			overview="portal-impl/src/portal-impl-overview.html"
 			stylesheetfile="${project.dir}/tools/javadoc.css"
@@ -552,6 +635,7 @@ print AdminControl.invoke(appManager, 'startApplication', 'liferay-portal')
 			<packageset dir="portal-service/src" />
 			<packageset dir="util-bridges/src" />
 			<packageset dir="util-java/src" />
+			<packageset dir="util-slf4j/src" />
 			<packageset dir="util-taglib/src" />
 
 			<tag name="generated" description="ServiceBuilder generated this class. Modifications in this class will be overwritten the next time it is generated." />
@@ -560,6 +644,64 @@ print AdminControl.invoke(appManager, 'startApplication', 'liferay-portal')
 
 	<target name="prepare-generated-files">
 		<ant antfile="build-dist.xml" target="prepare-generated-files" inheritAll="false" />
+	</target>
+
+	<target name="propertiesdoc">
+		<property name="properties.dest.dir" value="${doc.dir}/propertiesdoc" />
+
+		<delete dir="${properties.dest.dir}" />
+		<mkdir dir="${properties.dest.dir}" />
+
+		<antcall target="propertiesdoc-cmd">
+			<param name="properties.dest.dir" value="${properties.dest.dir}" />
+			<param name="properties.file" value="definitions/liferay-plugin-package_6_1_0.properties" />
+			<param name="properties.title" value="Liferay Plugin Package 6.1 Properties" />
+			<param name="properties.toc" value="true" />
+		</antcall>
+
+		<antcall target="propertiesdoc-cmd">
+			<param name="properties.dest.dir" value="${properties.dest.dir}" />
+			<param name="properties.file" value="definitions/liferay-plugin-package_6_2_0.properties" />
+			<param name="properties.title" value="Liferay Plugin Package 6.2 Properties" />
+			<param name="properties.toc" value="true" />
+		</antcall>
+
+		<antcall target="propertiesdoc-cmd">
+			<param name="properties.dest.dir" value="${properties.dest.dir}" />
+			<param name="properties.file" value="portal-impl/src/portal.properties" />
+			<param name="properties.title" value="Portal Properties" />
+			<param name="properties.toc" value="true" />
+		</antcall>
+
+		<antcall target="propertiesdoc-cmd">
+			<param name="properties.dest.dir" value="${properties.dest.dir}" />
+			<param name="properties.file" value="portal-impl/src/system.properties" />
+			<param name="properties.title" value="System Properties" />
+			<param name="properties.toc" value="true" />
+		</antcall>
+
+		<java
+			classname="com.liferay.portal.tools.propertiesdoc.PropertiesDocIndexBuilder"
+			classpathref="project.classpath"
+			fork="true"
+			newenvironment="true"
+		>
+			<arg value="properties.dir=${doc.dir}/propertiesdoc" />
+		</java>
+	</target>
+
+	<target name="propertiesdoc-cmd">
+		<java
+			classname="com.liferay.portal.tools.propertiesdoc.PropertiesDocBuilder"
+			classpathref="project.classpath"
+			fork="true"
+			newenvironment="true"
+		>
+			<arg value="properties.dest.dir=${properties.dest.dir}" />
+			<arg value="properties.file=${properties.file}" />
+			<arg value="properties.title=${properties.title}" />
+			<arg value="properties.toc=${properties.toc}" />
+		</java>
 	</target>
 
 	<target name="record-svn-revision">
@@ -584,7 +726,7 @@ print AdminControl.invoke(appManager, 'startApplication', 'liferay-portal')
 		<echo file="svn-revision">Revision: ${svn.info.revision}
 Username: ${svn.username}
 Password: ${svn.password}
-Portal: ${project.dir}
+Portal: ${lp.source.dir}
 Plugins: ${lp.plugins.dir}</echo>
 	</target>
 
